DPMS off seems to blank compositor's back or front buffer
Context
picom is a X compositor. User of picom can opt into having it only update damaged part of the screen. i.e. picom will only draw over damaged part of the back buffer and swaps buffer.
Problem
User has observed that, after the screen is turned off by DPMS then turned back on again by user action, parts of the screen will start to flicker (video: https://youtu.be/8vr6GGRQRq0). It appears that the updated (damaged) part of the screen is normal, while the other parts flicker between black and the expected content. Forcing picom to always render the whole screen fixes this problem
Possible causes
My hypothesis is that, when the screen is turned off by DPMS, one of the front or back buffer is blanked, so when picom updated the damaged part of that buffer, the other parts remained black. The unblanked buffer stays normal, and that causes flickering between normal and black when buffers are swapped.